--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,18 +83,16 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.squareup.okhttp:okhttp:2.5.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation project(path: ':CGBLibrary')
-    implementation project(path: ':DeviceFaker')
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'com.google.guava:guava:27.0.1-android'
-
-    implementation project(':transformations')
     implementation "com.squareup.picasso:picasso:${PICASSO_VERSION}"
     implementation "jp.co.cyberagent.android:gpuimage:${GPUIMAGE_VERSION}"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-
     implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
+
+    implementation project(path: ':DeviceFaker')
+    implementation project(path: ':accessibility')
 }
 
 ext {
